# InterPython_Workshop_Example

./: .pylintrc  README.md  light-curve-analysis.ipynb  light_curve_analysis.ipynb  pyproject.toml  requirements.txt  requirements2.txt
.github/workflows/: main.yml
interpython/: pyvenv.cfg
interpython/Scripts/: activate  activate.bat  get_gprof  get_objgraph  undill
interpython2/: pyvenv.cfg
interpython2/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack  get_gprof  get_objgraph  undill
tests/: test_models.py
